Fix filter spacing, add v-cloak inline

--- a/src/scss/components/_components.filter.scss
+++ b/src/scss/components/_components.filter.scss
@@ -34,6 +34,7 @@ $filter-background-color: $color-black;
 
     display: inline-block;
     cursor: pointer;
+    margin-right: ($spacing-unit--tiny * 0.75);
     margin-bottom: $spacing-unit--tiny;
     padding: $spacing-unit--tiny;
     border-radius: $global-radius;
