--- a/src/scss/generic/_generic.vue.scss
+++ b/src/scss/generic/_generic.vue.scss
@@ -6,6 +6,3 @@
  * Vue-specific styling.
  */
 
-[v-cloak] {
-  display: none;
-}
